# Bulletin-Board

./: pyproject.toml
bulletinboard/: db.sqlite3
bulletinboard/article/: admin.py  forms.py  models.py  urls.py  views.py
bulletinboard/article/migrations/: 0001_initial.py
bulletinboard/bulletinboard/: asgi.py  settings.py  urls.py  wsgi.py
bulletinboard/templates/: create.html  dashboard.html
